--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.firebase:firebase-database:17.0.0'
-
+    //Anko
+    implementation 'org.jetbrains.anko:anko-sqlite:0.10.4'
+    implementation 'org.jetbrains.anko:anko-commons:0.10.4'
     //gms
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
